// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link to have text decoration underline on hover should match snapshot 1`] = `
<a
  href="https://www.npmjs.com/package/app-studio"
  style={
    Object {
      "color": "inherit",
      "textDecoration": "inherit",
    }
  }
  target="_self"
>
  <div
    className="dy-flex fdn-row gp-3px ais-center fwp-nowrap tdn-none"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Link
  </div>
</a>
`;

exports[`Link to open external link in a new tab should match snapshot 1`] = `
Array [
  " ",
  <a
    href="https://www.npmjs.com/package/app-studio"
    style={
      Object {
        "color": "inherit",
        "textDecoration": "inherit",
      }
    }
    target="_blank"
  >
    <div
      className="dy-flex fdn-row gp-3px ais-center fwp-nowrap tdn-none"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      External
      <div
        className="wh-14px ht-14px dy-flex jct-center ais-center wht-14 lht-14px cr- tm-rotate0deg"
      >
        <svg
          aria-hidden="false"
          fill=""
          focusable="false"
          stroke="none"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1}
          viewBox="0 0 24 24"
        >
          <path
            d="M14 3h7v7h-2V5.41l-9.29 9.3-1.42-1.42 9.3-9.29H14V3ZM5 5h5v2H6v11h11v-4h2v5a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1Z"
          />
        </svg>
      </div>
    </div>
  </a>,
]
`;
